<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round_top_24_background_variant"
    android:paddingTop="@dimen/padding"
    android:theme="@style/Theme.Wallet.Popup">

    <View
        android:id="@+id/v_header"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="?attr/textHeadline5"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_header"
        tools:text="@string/app_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:minHeight="100dp"
        android:paddingStart="@dimen/padding"
        android:paddingTop="20dp"
        android:paddingEnd="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <View
        android:id="@+id/v_bottom"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/recycler_view" />

    <View
        android:id="@+id/v_background_action"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="?attr/colorBackgroundVariant"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/v_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="tv_negative,tv_positive"
        app:flow_horizontalAlign="end"
        app:flow_horizontalGap="16dp"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_background_action" />

    <TextView
        android:id="@+id/tv_negative"
        style="?attr/textBody1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_negative"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/cancel"
        android:textColor="?attr/colorOnNegative" />

    <TextView
        android:id="@+id/tv_positive"
        style="?attr/textBody1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_positive"
        android:clickable="false"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/ok"
        android:textColor="?attr/colorOnPositive" />

</androidx.constraintlayout.widget.ConstraintLayout>